ansible/dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kubernetes-dashboard-ingress
    namespace: kubernetes-dashboard
    annotations:
        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  rules:
    - host: dashboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-web
                port:
                  number: 8000
